balancer/Ingress/balancer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: balancer
  namespace: balancer
spec:
  ingressClassName: nginx
  rules:
    - host: sandbox.balancerproject.org
      http:
        paths:
          - backend:
              service:
                name: balancer
                port:
                  number: 8000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - sandbox.balancerproject.org
      secretName: balancer-tls
